[Misc] Code style improvement of XWikiTest