@@ -21,24 +21,20 @@ package com.xpn.xwiki;
 
 import java.io.ByteArrayInputStream;
 import java.net.URL;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 
 import javax.inject.Provider;
 import javax.servlet.http.Cookie;
 
-import org.apache.commons.collections4.IteratorUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
 import org.xwiki.bridge.event.DocumentCreatedEvent;
 import org.xwiki.bridge.event.DocumentCreatingEvent;
 import org.xwiki.bridge.event.DocumentDeletedEvent;
@@ -94,13 +90,13 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 /**
- * Unit tests for {@link com.xpn.xwiki.XWiki}.
+ * Unit tests for {@link XWiki}.
  *
  * @version $Id$
  */
 @OldcoreTest(mockXWiki = false)
 @AllComponents
-public class XWikiTest
+class XWikiTest
 {
     @InjectMockitoOldcore
     MockitoOldcore oldcore;
@@ -184,19 +180,18 @@ public class XWikiTest
         this.xwiki.setUserDefaultGroup("XWiki.user1", this.oldcore.getXWikiContext());
 
         // then
-        Mockito.verify(this.xwiki, times(0)).addUserToGroup(anyString(), anyString(), any(XWikiContext.class));
+        verify(this.xwiki, times(0)).addUserToGroup(anyString(), anyString(), any(XWikiContext.class));
     }
 
     @Test
-    public void testUserAddedToXWikiAllGroupWhenItsSpecifiedByConfigurationRegardlessXWikiAllGroupIsImplicit()
-        throws Exception
+    void userAddedToXWikiAllGroupWhenItsSpecifiedByConfigurationRegardlessXWikiAllGroupIsImplicit() throws Exception
     {
         // given
         this.oldcore.getMockXWikiCfg().setProperty("xwiki.authentication.group.allgroupimplicit", "1");
         this.oldcore.getMockXWikiCfg().setProperty("xwiki.users.initialGroups", "XWiki.XWikiAllGroup");
 
         XWikiGroupServiceImpl xWikiGroupService = new XWikiGroupServiceImpl();
-        xwiki.setGroupService(xWikiGroupService);
+        this.xwiki.setGroupService(xWikiGroupService);
 
         // when
         this.xwiki.setUserDefaultGroup("XWiki.user1", this.oldcore.getXWikiContext());
@@ -207,7 +202,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testAuthorAfterDocumentCopy() throws XWikiException
+    void authorAfterDocumentCopy() throws XWikiException
     {
         DocumentReference copyReference =
             new DocumentReference("Lyre", this.document.getDocumentReference().getLastSpaceReference());
@@ -219,7 +214,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testCreatorAfterDocumentCopy() throws XWikiException
+    void creatorAfterDocumentCopy() throws XWikiException
     {
         DocumentReference copyReference =
             new DocumentReference("Sirius", this.document.getDocumentReference().getLastSpaceReference());
@@ -231,7 +226,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testCreationDateAfterDocumentCopy() throws XWikiException, InterruptedException
+    void creationDateAfterDocumentCopy() throws XWikiException, InterruptedException
     {
         Date sourceCreationDate = this.document.getCreationDate();
         Thread.sleep(1000);
@@ -240,11 +235,11 @@ public class XWikiTest
         this.xwiki.copyDocument(this.document.getDocumentReference(), copyReference, this.oldcore.getXWikiContext());
         XWikiDocument copy = this.xwiki.getDocument(copyReference, this.oldcore.getXWikiContext());
 
-        assertTrue(copy.getCreationDate().equals(sourceCreationDate));
+        assertEquals(copy.getCreationDate(), sourceCreationDate);
     }
 
     @Test
-    public void testParseTemplateConsidersObjectField() throws XWikiException
+    void parseTemplateConsidersObjectField() throws XWikiException
     {
         DocumentReference skinReference =
             new DocumentReference(this.oldcore.getXWikiContext().getWikiId(), "XWiki", "XWikiSkins");
@@ -270,7 +265,7 @@ public class XWikiTest
      * See XWIKI-2096
      */
     @Test
-    public void testParseTemplateConsidersAttachment() throws XWikiException
+    void parseTemplateConsidersAttachment() throws XWikiException
     {
         XWikiDocument skin =
             new XWikiDocument(new DocumentReference(this.oldcore.getXWikiContext().getWikiId(), "XWiki", "Skin"));
@@ -292,7 +287,7 @@ public class XWikiTest
      * See XWIKI-2098
      */
     @Test
-    public void testParseTemplateConsidersObjectFieldBeforeAttachment() throws Exception
+    void parseTemplateConsidersObjectFieldBeforeAttachment() throws Exception
     {
         DocumentReference skinReference = new DocumentReference("xwiki", "XWiki", "XWikiSkins");
         XWikiDocument skinClass = new XWikiDocument(skinReference);
@@ -317,36 +312,34 @@ public class XWikiTest
     }
 
     @Test
-    public void testClearNameWithoutStripDotsWithoutAscii()
+    void clearNameWithoutStripDotsWithoutAscii()
     {
-        assertEquals("ee{&.txt",
-            this.xwiki.clearName("\u00E9\u00EA{&.txt", false, false, this.oldcore.getXWikiContext()));
+        assertEquals("ee{&.txt", this.xwiki.clearName("éê{&.txt", false, false, this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testClearNameWithoutStripDotsWithAscii()
+    void clearNameWithoutStripDotsWithAscii()
     {
-        assertEquals("ee.txt", this.xwiki.clearName("\u00E9\u00EA{&.txt", false, true, this.oldcore.getXWikiContext()));
+        assertEquals("ee.txt", this.xwiki.clearName("éê{&.txt", false, true, this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testClearNameWithStripDotsWithoutAscii()
+    void clearNameWithStripDotsWithoutAscii()
     {
-        assertEquals("ee{&txt",
-            this.xwiki.clearName("\u00E9\u00EA{&.txt", true, false, this.oldcore.getXWikiContext()));
+        assertEquals("ee{&txt", this.xwiki.clearName("éê{&.txt", true, false, this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testClearNameWithStripDotsWithAscii()
+    void clearNameWithStripDotsWithAscii()
     {
-        assertEquals("eetxt", this.xwiki.clearName("\u00E9\u00EA{&.txt", true, true, this.oldcore.getXWikiContext()));
+        assertEquals("eetxt", this.xwiki.clearName("éê{&.txt", true, true, this.oldcore.getXWikiContext()));
     }
 
     /**
      * We only verify here that the saveDocument API calls the Observation component.
      */
     @Test
-    public void testSaveDocumentSendsObservationEvents() throws Exception
+    void saveDocumentSendsObservationEvents() throws Exception
     {
         EventListener mockListener = mock(EventListener.class);
         when(mockListener.getName()).thenReturn("testlistener");
@@ -372,35 +365,24 @@ public class XWikiTest
     }
 
     @Test
-    public void testSaveDocumentWithListenerSwitchDirtyFlagToTrue() throws Exception
+    void saveDocumentWithListenerSwitchDirtyFlagToTrue() throws Exception
     {
         EventListener mockListener = mock(EventListener.class);
         when(mockListener.getName()).thenReturn("testlistener");
         DocumentReference ref = new DocumentReference("xwikitest", "Some", "Document");
         when(mockListener.getEvents())
-            .thenReturn(Arrays.asList(new DocumentCreatingEvent(ref)));
-        doAnswer(new Answer<Void>()
-        {
-            @Override
-            public Void answer(InvocationOnMock invocation) throws Throwable
-            {
-                ((XWikiDocument) invocation.getArgument(1)).setContent("modified content");
-
-                return null;
-            }
+            .thenReturn(List.of(new DocumentCreatingEvent(ref)));
+        doAnswer(invocation -> {
+            invocation.<XWikiDocument>getArgument(1).setContent("modified content");
+            return null;
         }).when(mockListener).onEvent(any(), any(), any());
 
-        doAnswer(new Answer<Void>()
-        {
-            @Override
-            public Void answer(InvocationOnMock invocation) throws Throwable
-            {
-                XWikiDocument document = (XWikiDocument) invocation.getArgument(0);
-                assertFalse(document.isMetaDataDirty());
-                assertFalse(document.isContentDirty());
+        doAnswer(invocation -> {
+            XWikiDocument document = invocation.getArgument(0);
+            assertFalse(document.isMetaDataDirty());
+            assertFalse(document.isContentDirty());
 
-                return null;
-            }
+            return null;
         }).when(this.oldcore.getMockStore()).saveXWikiDoc(any(), any());
 
         ObservationManager om = this.oldcore.getMocker().getInstance(ObservationManager.class);
@@ -419,36 +401,26 @@ public class XWikiTest
     }
 
     @Test
-    public void testSaveDocumentWithListenerSwitchDirtyFlagToFalse() throws Exception
+    void saveDocumentWithListenerSwitchDirtyFlagToFalse() throws Exception
     {
         EventListener mockListener = mock(EventListener.class);
         when(mockListener.getName()).thenReturn("testlistener");
         DocumentReference ref = new DocumentReference("xwikitest", "Some", "Document");
         when(mockListener.getEvents())
-            .thenReturn(Arrays.asList(new DocumentCreatingEvent(ref)));
-        doAnswer(new Answer<Void>()
-        {
-            @Override
-            public Void answer(InvocationOnMock invocation) throws Throwable
-            {
-                ((XWikiDocument) invocation.getArgument(1)).setMetaDataDirty(false);
-                ((XWikiDocument) invocation.getArgument(1)).setContentDirty(false);
+            .thenReturn(List.of(new DocumentCreatingEvent(ref)));
+        doAnswer(invocation -> {
+            invocation.<XWikiDocument>getArgument(1).setMetaDataDirty(false);
+            invocation.<XWikiDocument>getArgument(1).setContentDirty(false);
 
-                return null;
-            }
+            return null;
         }).when(mockListener).onEvent(any(), any(), any());
 
-        doAnswer(new Answer<Void>()
-        {
-            @Override
-            public Void answer(InvocationOnMock invocation) throws Throwable
-            {
-                XWikiDocument document = (XWikiDocument) invocation.getArgument(0);
-                assertFalse(document.isMetaDataDirty());
-                assertFalse(document.isContentDirty());
+        doAnswer(invocation -> {
+            XWikiDocument document = invocation.getArgument(0);
+            assertFalse(document.isMetaDataDirty());
+            assertFalse(document.isContentDirty());
 
-                return null;
-            }
+            return null;
         }).when(this.oldcore.getMockStore()).saveXWikiDoc(any(), any());
 
         ObservationManager om = this.oldcore.getMocker().getInstance(ObservationManager.class);
@@ -468,7 +440,7 @@ public class XWikiTest
      * We only verify here that the renameDocument API calls the Observation component.
      */
     @Test
-    public void testRenameDocumentSendsObservationEvents() throws Exception
+    void renameDocumentSendsObservationEvents() throws Exception
     {
         DocumentReference sourceReference = new DocumentReference("xwikitest", "Some", "Source");
         DocumentReference targetReference = new DocumentReference("xwikitest", "Some", "Target");
@@ -506,7 +478,7 @@ public class XWikiTest
      * We only verify here that the deleteDocument API calls the Observation component.
      */
     @Test
-    public void testDeleteDocumentSendsObservationEvents() throws Exception
+    void deleteDocumentSendsObservationEvents() throws Exception
     {
         EventListener mockListener = mock(EventListener.class);
         when(mockListener.getName()).thenReturn("testlistener");
@@ -536,20 +508,19 @@ public class XWikiTest
     }
 
     @Test
-    public void testLanguageSelection() throws Exception
+    void languageSelection()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
-            @SuppressWarnings("unchecked")
             @Override
-            public Enumeration getLocales()
+            public Enumeration<Locale> getLocales()
             {
-                ArrayList<Locale> locales = new ArrayList<Locale>();
-                locales.add(new Locale("*"));
-                locales.add(new Locale("en", "US"));
-                locales.add(new Locale("fr"));
-                locales.add(new Locale("de"));
-                return IteratorUtils.asEnumeration(locales.iterator());
+                return Collections.enumeration(List.of(
+                    new Locale("*"),
+                    new Locale("en", "US"),
+                    new Locale("fr"),
+                    new Locale("de")
+                ));
             }
 
             @Override
@@ -575,19 +546,18 @@ public class XWikiTest
     }
 
     @Test
-    public void testLanguageSelectionWithSupportedLanguages() throws Exception
+    void languageSelectionWithSupportedLanguages()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
-            @SuppressWarnings("unchecked")
             @Override
-            public Enumeration getLocales()
+            public Enumeration<Locale> getLocales()
             {
-                ArrayList<Locale> locales = new ArrayList<Locale>();
-                locales.add(new Locale("*"));
-                locales.add(new Locale("fr", "FR"));
-                locales.add(new Locale("de"));
-                return IteratorUtils.asEnumeration(locales.iterator());
+                return Collections.enumeration(List.of(
+                    new Locale("*"),
+                    new Locale("fr", "FR"),
+                    new Locale("de")
+                ));
             }
 
             @Override
@@ -617,13 +587,13 @@ public class XWikiTest
      * XWIKI-8469: Bad default of 1 in XWiki.isMultilingual instead of 0 (when no XWikiPreferences object exists)
      */
     @Test
-    public void testIsMultilingualDefaultFalse() throws Exception
+    void isMultilingualDefaultFalse()
     {
         assertFalse(this.xwiki.isMultiLingual(this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testGetCurrentContentSyntaxId()
+    void getCurrentContentSyntaxId()
     {
         XWikiDocument doc1 = new XWikiDocument();
         doc1.setSyntax(Syntax.CREOLE_1_0);
@@ -651,7 +621,7 @@ public class XWikiTest
      * @throws Exception when any exception occurs inside XWiki
      */
     @Test
-    public void testValidationKeyStorage() throws Exception
+    void validationKeyStorage() throws Exception
     {
         XWikiContext context = this.oldcore.getXWikiContext();
         context.setLanguage("en");
@@ -708,7 +678,7 @@ public class XWikiTest
      * @throws Exception when any exception occurs inside XWiki
      */
     @Test
-    public void testGetPrefsClass() throws Exception
+    void getPrefsClass() throws Exception
     {
         when(this.oldcore.getMockStore().getLimitSize(any(), any(), any())).thenReturn(255);
 
@@ -717,20 +687,14 @@ public class XWikiTest
         documents.put(prefsDoc.getDocumentReference(), prefsDoc);
 
         when(this.oldcore.getMockStore().loadXWikiDoc(notNull(), same(this.oldcore.getXWikiContext())))
-            .then(new Answer<XWikiDocument>()
-            {
-
-                @Override
-                public XWikiDocument answer(InvocationOnMock invocation) throws Throwable
-                {
-                    XWikiDocument document = (XWikiDocument) invocation.getArgument(0);
-                    if (!documents.containsKey(document.getDocumentReference())) {
-                        documents.put(document.getDocumentReference(), document);
-                    } else {
-                        document = documents.get(document.getDocumentReference());
-                    }
-                    return document;
+            .then(invocation -> {
+                XWikiDocument document = invocation.getArgument(0);
+                if (!documents.containsKey(document.getDocumentReference())) {
+                    documents.put(document.getDocumentReference(), document);
+                } else {
+                    document = documents.get(document.getDocumentReference());
                 }
+                return document;
             });
 
         this.xwiki.getPrefsClass(this.oldcore.getXWikiContext());
@@ -745,7 +709,7 @@ public class XWikiTest
      * XWIKI-12398: No layout for login page in a closed wiki
      */
     @Test
-    public void testSkinResourcesAreAlwaysAllowed() throws XWikiException
+    void skinResourcesAreAlwaysAllowed() throws XWikiException
     {
         // /skin/resources/icons/xwiki/noavatar.png
         XWikiDocument doc1 = new XWikiDocument(
@@ -764,7 +728,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testCheckActiveSuperadmin() throws Exception
+    void checkActiveSuperadmin() throws Exception
     {
         int isUserActive =
             this.xwiki.checkActive(XWikiRightService.SUPERADMIN_USER_FULLNAME, this.oldcore.getXWikiContext());
@@ -776,7 +740,7 @@ public class XWikiTest
      * XWIKI-14300: Superadmin is locked out of subwikis with "AUTHENTICATION ACTIVE CHECK" enabled
      */
     @Test
-    public void testCheckActivePrefixedSuperadmin() throws Exception
+    void checkActivePrefixedSuperadmin() throws Exception
     {
         // In a subwiki, the superadmin always logs in as a global user.
         int isUserActive = this.xwiki.checkActive("xwiki:" + XWikiRightService.SUPERADMIN_USER_FULLNAME,
@@ -786,7 +750,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithContext() throws Exception
+    void getLocalePreferenceWithContext()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null));
         this.oldcore.getXWikiContext().setLocale(Locale.FRENCH);
@@ -795,7 +759,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceDefaultNonMultilingual() throws Exception
+    void getLocalePreferenceDefaultNonMultilingual()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null));
 
@@ -803,7 +767,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithParameterForcingUnset() throws Exception
+    void getLocalePreferenceWithParameterForcingUnset()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -827,7 +791,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithParameter() throws Exception
+    void getLocalePreferenceWithParameter()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -849,7 +813,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithParameterWithSupportedLanguages() throws Exception
+    void getLocalePreferenceWithParameterWithSupportedLanguages()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -872,7 +836,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithParameterDefault() throws Exception
+    void getLocalePreferenceWithParameterDefault()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -893,7 +857,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithCookieForcingUnset() throws Exception
+    void getLocalePreferenceWithCookieForcingUnset()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -914,7 +878,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithCookie() throws Exception
+    void getLocalePreferenceWithCookie()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -928,12 +892,12 @@ public class XWikiTest
         // Set the wiki to multilingual mode.
         this.oldcore.getMockWikiConfigurationSource().setProperty("multilingual", "1");
 
-        // By default we force only supported languages
+        // By default, we force only supported languages
         assertEquals(Locale.ENGLISH, this.xwiki.getLocalePreference(this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testGetLocalePreferenceWithCookieDefaultNotSet() throws Exception
+    void getLocalePreferenceWithCookieDefaultNotSet()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -947,12 +911,12 @@ public class XWikiTest
         // Set the wiki to multilingual mode.
         this.oldcore.getMockWikiConfigurationSource().setProperty("multilingual", "1");
 
-        // By default we force only supported languages
+        // By default, we force only supported languages
         assertEquals(Locale.ENGLISH, this.xwiki.getLocalePreference(this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testGetLocalePreferenceWithCookieDefaultSet() throws Exception
+    void getLocalePreferenceWithCookieDefaultSet()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
@@ -967,24 +931,24 @@ public class XWikiTest
         this.oldcore.getMockWikiConfigurationSource().setProperty("multilingual", "1");
         this.oldcore.getMockWikiConfigurationSource().setProperty("languages", "en, |fr_FR, |en_US, |fr_CA");
 
-        // By default we force only supported languages
+        // By default, we force only supported languages
         assertEquals(Locale.CANADA_FRENCH, this.xwiki.getLocalePreference(this.oldcore.getXWikiContext()));
     }
 
     @Test
-    public void testGetLocalePreferenceWithNavigatorLanguagesForcingUnset() throws Exception
+    void getLocalePreferenceWithNavigatorLanguagesForcingUnset()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
             @Override
             public Enumeration<Locale> getLocales()
             {
-                ArrayList<Locale> locales = new ArrayList<>();
-                locales.add(new Locale("*"));
-                locales.add(new Locale("en", "US"));
-                locales.add(new Locale("fr"));
-                locales.add(new Locale("de"));
-                return IteratorUtils.asEnumeration(locales.iterator());
+                return Collections.enumeration(List.of(
+                    new Locale("*"),
+                    new Locale("en", "US"),
+                    new Locale("fr"),
+                    new Locale("de")
+                ));
             }
         });
 
@@ -998,19 +962,19 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithNavigatorLanguages() throws Exception
+    void getLocalePreferenceWithNavigatorLanguages()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
             @Override
             public Enumeration<Locale> getLocales()
             {
-                ArrayList<Locale> locales = new ArrayList<>();
-                locales.add(new Locale("*"));
-                locales.add(new Locale("en", "US"));
-                locales.add(new Locale("fr"));
-                locales.add(new Locale("de"));
-                return IteratorUtils.asEnumeration(locales.iterator());
+                return Collections.enumeration(List.of(
+                    new Locale("*"),
+                    new Locale("en", "US"),
+                    new Locale("fr"),
+                    new Locale("de")
+                ));
             }
         });
 
@@ -1022,19 +986,19 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithNavigatorLanguagesDefaultSet() throws Exception
+    void getLocalePreferenceWithNavigatorLanguagesDefaultSet()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null)
         {
             @Override
             public Enumeration<Locale> getLocales()
             {
-                ArrayList<Locale> locales = new ArrayList<>();
-                locales.add(new Locale("*"));
-                locales.add(new Locale("en", "US"));
-                locales.add(new Locale("fr"));
-                locales.add(new Locale("de"));
-                return IteratorUtils.asEnumeration(locales.iterator());
+                return Collections.enumeration(List.of(
+                    new Locale("*"),
+                    new Locale("en", "US"),
+                    new Locale("fr"),
+                    new Locale("de")
+                ));
             }
         });
 
@@ -1047,7 +1011,7 @@ public class XWikiTest
     }
 
     @Test
-    public void testGetLocalePreferenceWithNavigatorLanguagesFallback() throws Exception
+    void getLocalePreferenceWithNavigatorLanguagesFallback()
     {
         this.oldcore.getXWikiContext().setRequest(new XWikiServletRequest(null));
 
@@ -1059,7 +1023,7 @@ public class XWikiTest
 
     // test implementation of document rename before atomic rename.
     @Test
-    public void renameDocumentOldImplementation() throws Exception
+    void renameDocumentOldImplementation() throws Exception
     {
         // Possible ways to write parents, include documents, or make links:
         // "name" -----means-----> DOCWIKI+":"+DOCSPACE+"."+input
@@ -1131,7 +1095,7 @@ public class XWikiTest
     }
 
     @Test
-    public void atomicRename() throws Exception
+    void atomicRename() throws Exception
     {
         XWikiContext xWikiContext = this.oldcore.getXWikiContext();
         doAnswer(invocationOnMock -> {
